# zuazo-magick

./: CMakeLists.txt  README.md
examples/: 00 - Instantiating.cpp
include/zuazo/Modules/: Magick.h
include/zuazo/Sources/: Magick.h
src/: MagickConversions.h  MagickConversions.inl
src/Modules/: Magick.cpp
src/Sources/: Magick.cpp  PixelFormats.cpp
